--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
     <li><a href="/doctor/10">David Tennant</a></li>
 </ul>
 <ul>
-    <li><a href="/doctor/13">Jodie Whittaker</a</li>
+    <li><a href="/doctor/13">Jodie Whittaker</a></li>
 </ul>
 
 
